# shared-lib-loading

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md
API/: ishared.h
Core/: main.cpp
Core/DLLoader/Unix/: DLLoader.h
Core/DLLoader/Windows/: DLLoader.h
Core/cpp/: EnvVariablesImporter.cpp  Logger.cpp
Core/header/: EnvVariablesImporter.h  Logger.h
Libraries/LibVersion001/: CMakeLists.txt  StatVersion001.cpp  StatVersion001.h
Libraries/LibVersion002/: CMakeLists.txt  StatVersion002.cpp  StatVersion002.h
